--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,17 @@
-[tool.poetry]
+[project]
 name = "nonebot-plugin-groups-aichat"
-version = "0.1.0r1"
+version = "0.1.2"
 description = ""
-authors = ["KarisAya <1048827424@qq.com>"]
+authors = [{ name = "KarisAya", email = "1048827424@qq.com" }]
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.12"
-nonebot2 = "^2.4.1"
-nonebot-plugin-clovers = {version = "^0.2.0", extras = ["onebot"]}
-clovers-aichat = "^0.2.0.post1"
+requires-python = ">=3.12,<4.0.0"
+dependencies = [
+    "nonebot2 (>=2.4.1,<3.0.0)",
+    "nonebot-plugin-clovers[onebot] (>=0.2.1,<0.3.0)",
+    "clovers-aichat (>=0.2.0.post1,<0.3.0)",
+]
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
