--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = [{ name = "KarisAya", email = "1048827424@qq.com" }]
 readme = "README.md"
 requires-python = ">=3.12,<4.0.0"
 dependencies = [
+    "pydantic (>=2.10.6,<3.0.0)",
     "nonebot2 (>=2.4.1,<3.0.0)",
-    "nonebot-plugin-clovers[onebot] (>=0.2.3,<0.3.0)",
+    "nonebot-plugin-clovers[onebot] (>=0.2.4,<0.3.0)",
     "clovers-aichat (>=0.2.0.post1,<0.3.0)",
 ]
 
